deploy/06-route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  labels:
    app: custom-tekton-listener
  name: custom-tekton-listener
  namespace: custom-tekton-listener

spec:
  port:
    targetPort: http

  tls:
    termination: edge
    
  to:
    kind: Service
    name: custom-tekton-listener
    weight: 100

  wildcardPolicy: None
